# df-etl-cli

./: .gitignore  README.md  SPEC-0.2-cve-domain-nodes.md  SPEC-cve-coverage-needs.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/dfio/: __init__.py  base.py  cli.py  engine.py  etl.py  graph.py  node.py  registry.py  runner.py  types.py  uri.py
src/dfio/sources/: console.py  parquet.py  text.py  values.py
src/dfio/transforms/: flatten.py  identity.py  sql.py
tests/: conftest.py  test_cli.py  test_etl.py  test_graph.py  test_nodes.py  test_sources.py  test_transforms.py  test_uri.py
