[project]
name = "dfio"
version = "0.1.0"
description = "URI-based, engine-agnostic ETL (Python port of dataframe-io, built on Ibis)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ibis-framework[duckdb]>=9.0",
]

[project.optional-dependencies]
polars = ["ibis-framework[polars]>=9.0"]
pyspark = ["ibis-framework[pyspark]>=9.0"]
dev = ["pytest>=8.0", "hypothesis>=6.100", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
dfio = "dfio.cli:main"

# External packages register new schemes here, mirroring the Scala ServiceLoader plugin model.
[project.entry-points."dfio.sources"]

[project.entry-points."dfio.transforms"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dfio"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
